--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@fastify/cors": "8.5.0",
     "npm": "9.9.2",
     "swiper": "11.0.5"
   }
