--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 # APP
 VITE_APP_NODE_ENV=local
 VITE_APP_DEVELOPMENT_PORT=3000
-VITE_APP_API_ORIGIN_URL=https://soundvault-backend.onrender.com/api/v1
+VITE_APP_API_ORIGIN_URL=http://localhost:3001/api/v1
 
 # DEV
 VITE_APP_PROXY_SERVER_URL=http://localhost:3001
