--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@fastify/cors": "8.5.0",
+    "file-type": "18.7.0",
     "npm": "9.9.2",
     "swiper": "11.0.5"
   }
