Removed email and refactored to be folklore based app

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "build": "tsc && tsc-alias && npm run build:copy",
     "prestart": "cd build && npm run migrate",
     "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback --all",
     "start": "node ./build/src/index.js"
   },
   "devDependencies": {
